[gd_scene load_steps=8 format=3 uid="uid://bw6eh1qy8it4a"]

[ext_resource type="PackedScene" uid="uid://4rwmb5gf6jqu" path="res://scenes/game/modal/modal.tscn" id="1_4a3vp"]
[ext_resource type="Script" path="res://scenes/game/modal/main/menu_modal.gd" id="2_w7vg4"]
[ext_resource type="PackedScene" uid="uid://jsakvoov63xq" path="res://scenes/game/modal/main/LetterProbabilities.tscn" id="3_kq2qo"]
[ext_resource type="StyleBox" uid="uid://d0r5f6321vjml" path="res://styles/button/button_icon.tres" id="4_1n882"]
[ext_resource type="Script" path="res://scenes/game/modal/main/Stats.gd" id="4_fcksr"]
[ext_resource type="PackedScene" uid="uid://ce5bbpkqpsvp7" path="res://scenes/game/modal/main/stat_panel.tscn" id="5_nlnqv"]
[ext_resource type="Texture2D" uid="uid://bpuoacu0ngb1y" path="res://icons/ArrowLeft.png" id="5_pn8uy"]

[node name="MenuModal" instance=ExtResource("1_4a3vp")]
script = ExtResource("2_w7vg4")

[node name="Label" parent="Background/VBox/Title/Margin" index="0"]
text = "Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBox/Details/Margin" index="0"]
layout_mode = 2

[node name="LetterProbabilities" parent="Background/VBox/Details/Margin/HBoxContainer" index="0" instance=ExtResource("3_kq2qo")]
layout_mode = 2

[node name="Stats" type="VBoxContainer" parent="Background/VBox/Details/Margin/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 10
script = ExtResource("4_fcksr")

[node name="ResetSeconds" parent="Background/VBox/Details/Margin/HBoxContainer/Stats" index="0" instance=ExtResource("5_nlnqv")]
layout_mode = 2

[node name="Letters" parent="Background/VBox/Details/Margin/HBoxContainer/Stats" index="1" instance=ExtResource("5_nlnqv")]
layout_mode = 2

[node name="Multipliers" parent="Background/VBox/Details/Margin/HBoxContainer/Stats" index="2" instance=ExtResource("5_nlnqv")]
layout_mode = 2

[node name="ButtonLeft" parent="Background/VBox/Buttons/MarginContainer/HBoxContainer" index="0"]
text = "MAIN MENU"

[node name="ButtonMiddle" parent="Background/VBox/Buttons/MarginContainer/HBoxContainer" index="1"]
text = "RESET
"

[node name="ButtonRight" parent="Background/VBox/Buttons/MarginContainer/HBoxContainer" index="2"]
visible = false
text = "BACK"

[node name="Back" type="Button" parent="Background" index="1"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 88.0
offset_bottom = 48.0
theme_override_constants/h_separation = -5
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("4_1n882")
theme_override_styles/hover = ExtResource("4_1n882")
theme_override_styles/pressed = ExtResource("4_1n882")
theme_override_styles/focus = ExtResource("4_1n882")
text = "Back"
icon = ExtResource("5_pn8uy")
expand_icon = true

[connection signal="pressed" from="Background/VBox/Buttons/MarginContainer/HBoxContainer/ButtonLeft" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="Background/VBox/Buttons/MarginContainer/HBoxContainer/ButtonMiddle" to="." method="_on_button_middle_pressed"]
[connection signal="pressed" from="Background/Back" to="." method="_on_back_pressed"]
